# fastapi-project

./: app.py  pyproject.toml
